--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,24 @@
-# Dependencies
-/node_modules
-
-# Environment variables
-.env
-
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE directories and files
-.idea/
-.vscode/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# IDX project files
-.idx/
-
-# Optional Build output
-/dist
-/build
