--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tabler/icons-react": "^3.34.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +26,7 @@
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.15.4",
     "tailwind-merge": "^2.6.0",
